@@ -4,4 +4,5 @@
 #VERSION=('1.2.0','02/11/2015','add version, admin. server settings')
 #VERSION=('1.3.0','XXX','add date and comment to version')
 #VERSION=('1.3.1','XXX','add help on product code explanation and generation')
-VERSION=('1.3.3','21/11/2015','add TEMP_DIR setting')
+#VERSION=('1.3.3','21/11/2015','add TEMP_DIR setting')
+VERSION=('1.4.0','26/12/2015','feat: Update for paging and small style updates.')
