@@ -21,13 +21,13 @@
                     {% else %}
                         class="nav-1-unselected"
                     {% endif %}
-                    href="/ims/sites">Sites</a></li>
+                    href="/ims/sites?page=1">Sites</a></li>
                 <li><a {% if nav_products %}
                         class="nav-1-selected"
                     {% else %}
                         class="nav-1-unselected"
                     {% endif %}
-                    href="/ims/products">Products</a></li>
+                    href="/ims/products?page=1">Products</a></li>
                 <li><a {% if nav_reports %}
                         class="nav-1-selected"
                     {% else %}
