@@ -10,3 +10,5 @@
 * 007f350 (HEAD, master) add help on product code explanation and generation
 21/11/2015 Version 1.3.3:
 * feac80e (HEAD, master) add TEMP_DIR to settings
+26/11/2015 Version 1.4.0:
+* 02a49f0 (HEAD, master) feat: Update for paging and small style updates.
